--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Memmory Game</title>
+  <title>Memory Game</title>
   <link rel="stylesheet" href="assets/css/main.min.css">
 </head>
 
