--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Memory Game</title>
-  <link rel="stylesheet" href="assets/css/main.min.css">
+  <title>Memory Pair Game</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-  <div class="container">
-  </div>
-  <script src="assets/js/main.min.js"></script>
+  <div class="container"></div>
+  <script src="app.js"></script>
 </body>
 
 </html>
