--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Memory Pair Game</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
   <link href="main.css" rel="stylesheet">
+  <link href="favicon.png" rel="icon" type="image/png" sizes="16x16">
 </head>
 
 <body>
