--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Memory Pair Game</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-  <link href="main.css" rel="stylesheet">
   <link href="favicon.png" rel="icon" type="image/png" sizes="16x16">
 </head>
 
 <body>
   <div class="container"></div>
-  <script src="app.js"></script>
+  <script src="./index.js"></script>
 </body>
 
 </html>
